[package]
name = "lp50xx-async"
version = "0.1.0"
edition = "2021"

[dependencies]
device-driver = "1.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
defmt = { version = "0.3", optional = true }
heapless = "0.9"

[features]
defmt-03 = ["dep:defmt", "device-driver/defmt-03"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["embedded-hal-async"] }
async-std = { version = "1.13", features = ["attributes"]}